# simprint

./: .gitignore  README.md  README.zh-CN.md
deploy/: install-server.sh  publish-github-release.mjs
plugins/layouts/app-layout/src/components/: app-sidebar.tsx
plugins/layouts/app-layout/src/components/titlebar/: workspace-switch-dialog.tsx
plugins/pages/create-window/src/api/: index.ts  index.types.ts
plugins/pages/create-window/src/components/: create-window-edit-cookies-dialog.tsx  window-info-form.tsx
plugins/pages/create-window/src/hooks/: use-create-window.ts
plugins/pages/create-window/src/types/: index.ts
plugins/pages/create-window/src/utils/: environment-to-config.ts  template-to-config.ts
plugins/pages/environment-manager/src/api/: index.ts  index.types.ts
plugins/pages/environment-manager/src/components/: environment-edit-cookies-dialog.tsx
plugins/pages/proxy-center/src/: index.tsx
plugins/pages/proxy-center/src/i18n/: resources.ts
plugins/pages/proxy-center/src/mihomo/: api.ts  clash-icon.tsx  mihomo-connect-dialog.tsx  mihomo-page.tsx  mihomo-text-input.tsx  types.ts
plugins/services/environment/src/: types.ts
src/: index.css
src-tauri/: Cargo.toml  build.rs  config.example.toml
src-tauri/src/: commands.rs
src-tauri/src/app/: context.rs
src-tauri/src/commands/: environment.rs  mihomo.rs  network.rs
src-tauri/src/core/config/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/mihomo/: client.rs  mod.rs  models.rs
src-tauri/src/infrastructure/runtime/: api.rs  mod.rs
src-tauri/src/local_api/entitys/: environments.rs
src-tauri/src/mcp/tools/: environments_extras.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/environment/: mod.rs
src-tauri/src/services/environment/kernel/: downloader.rs  mod.rs  runtime_bridge.rs  state.rs  types.rs
src-tauri/src/services/environment/launch_runtime/: mod.rs  types.rs
src-tauri/src/services/mihomo/: mod.rs
src-tauri/src/services/runtime_updater/: service.rs  types.rs
