[package]
name = "simprint"
version = "0.1.0"
description = "Simprint Browser"
authors = ["liusnew"]
edition = "2024"
default-run = "simprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simprint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "updater"
path = "src/bin/updater.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "2.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
zip = "2.2.2"
config = "0.15.15"
serde = { version = "1", features = ["derive"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
  "io-std",
  "sync",
  "time",
  "net",
] }
tauri = { version = "2", features = [ "tray-icon", "default", "devtools", "image-ico", "image-png", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
anyhow = "1.0.97"
log = "0.4.26"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2.3.1"
tauri-plugin-opener = "2"
tauri-plugin-upload = "2.2.1"
tauri-plugin-process = "2.2.0"
tauri-plugin-deep-link = "2.2.1"
tauri-plugin-dialog = "2.6.0"
sysinfo = "0.34.2"
base64 = "0.22.1"
rand = "0.9.1"
rsa = "0.9.8"
aes-gcm = "0.10.3"
bytes = "1.10.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["multipart", "socks"] }
tokio-socks = "0.5"
tokio-util = "0.7"
futures = "0.3.31"
once_cell = "1.20"
sha2 = "0.10.9"
config = "0.15.15"
uuid = { version = "1.18.1", features = ["v4"] }
hex = "0.4.3"
zip = "2.2.2"
axum = "0.8.4"
regex = "1.12.2"
aes = "0.8"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = "1.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-store = "2.4.2"
directories = "6.0.0"
rmp-serde = "1.3"       # MessagePack 序列化
serde_bytes = "0.11"    # 字节数组序列化
indexmap = { version = "2.12.0", features = ["serde"] }

hkdf = "0.12"

[target.'cfg(windows)'.dependencies]
smbios-lib = "0.9.2"
winreg = "0.55"
windows = { version = "0.61.1",features = [
  "Win32_Foundation",
  "Win32_Security_WinTrust",
  "Win32_Security_Cryptography_Certificates",
  "Win32_Security_Cryptography",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_System_ProcessStatus",
  "Win32_Globalization",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.2.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"

[rustfmt]
use_small_heuristics = "Default"

[features]
development = []
production = []
test = []
